--- a/exercises/collection/Cargo.toml
+++ b/exercises/collection/Cargo.toml
@@ -3,6 +3,11 @@ name = "collection"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "collection"
+path = "src/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+unicode-segmentation = "1.11.0"
